--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>Movie Project</title>
+      <style>
+        h1{
+          text-align:center
+
+        }
+        h3{
+          text-align:center
+
+        }
+        .plot{
+
+        }
+        div{
+          background-image:img src="Spiderman.jpg";
+        }
+    </style>
   </head>
   <body>
 <h1>spider-man into the spider verse</h1>
-
+<h3>release date:December 14,2018</h3>
+<h3>box office:375.5 Million USD| Usd Budget:90 million USD</h3>
+<h3 style="Plot">Bitten by a radioactive spider in the subway,
+   Brooklyn teenager Miles Morales suddenly develops mysterious powers that transform him into the one and only Spider-Man.
+   When he meets Peter Parker, he soon realizes that there are many others who share his special, high-flying talents.
+   Miles must now use his newfound skills to battle the evil Kingpin,
+   a hulking madman who can open portals to other universes and pull different versions of Spider-Man into our world.</h3>
 
 
 
