--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
         .plot{
 
         }
-        div{
-          background-image:img src="Spiderman.jpg";
+        table, th,td{
+          Border:1px solid black;
         }
+
     </style>
   </head>
   <body>
-<h1>spider-man into the spider verse</h1>
+    <h1 style="font-family:'Permanent Marker', cursive;">spider-man into the spider verse</h1>
 <h3>release date:December 14,2018</h3>
 <h3>box office:375.5 Million USD| Usd Budget:90 million USD</h3>
 <h3 style="Plot">Bitten by a radioactive spider in the subway,
@@ -29,8 +30,119 @@
    When he meets Peter Parker, he soon realizes that there are many others who share his special, high-flying talents.
    Miles must now use his newfound skills to battle the evil Kingpin,
    a hulking madman who can open portals to other universes and pull different versions of Spider-Man into our world.</h3>
-
-
+   <img src="spider-verse.jpg" alt="spiderman">
+<table align="left">
+  <tr>
+    <th>Song</th>
+    <th>artists</th>
+  </tr>
+  <tr>
+    <td>Sunflower|</td>
+    <td>Swae Lee & Post Malone</td>
+  </tr>
+  <tr>
+    <td>What's Up Danger</td>
+    <td>Blackway & Black Caviar</td>
+  </tr>
+  <tr>
+  <td>Hide</td>
+  <td>Juice Wrld</td>
+</tr>
+<tr>
+  <td>Way Up</td>
+  <td>Jaden Smith</td>
+</tr>
+<tr>
+  <td>scared of the dark</td>
+  <td>Ty Dollar Sign, Lil Wayne & XXXTentacion</td>
+</tr>
+<tr>
+<td>Home</td>
+<td>Vince Staples</td>
+</tr>
+<tr>
+  <td>Elevate</td>
+  <td>SwaVay, Trevor Rich, Denzel Curry & YBN Cordae</td>
+</tr>
+<tr>
+<td>Invincible</td>
+<td>Anime</td>
+</tr>
+<tr>
+  <td>Save the Day</td>
+  <td>Coi Leray, Jacquees & Ski Mask The Slump God</td>
+</tr>
+<tr>
+  <td>Start a riot</td>
+  <td>Duckwrth</td>
+</tr>
+</table>
+<table align="right">
+  <tr>
+<th>actor</th>
+<th>character</th>
+  </tr>
+  <tr>
+    <td>Shameik Moore</td>
+    <td>Miles Morales</td>
+  </tr>
+  <tr>
+    <td>Jake Johnson</td>
+    <td>Peter B. Parker</td>
+  </tr>
+  <tr>
+    <td>Haliee Steinfeld</td>
+    <td>Gwen Stacy</td>
+  </tr>
+  <tr>
+    <td>Mahershala ali</td>
+    <td>Uncle Aaron</td>
+  </tr>
+  <tr>
+    <td>Brian Tyree Henry</td>
+    <td>Jefferson Davis</td>
+  </tr>
+  <tr>
+    <td>Lily Tomlin</td>
+    <td>Aunt May</td>
+  </tr>
+  <tr>
+    <td>Luna Lauren Velez</td>
+    <td>Rio Morales</td>
+  </tr>
+  <tr>
+    <td>Zoe Kravitz</td>
+    <td>Mary Jane</td>
+  </tr>
+  <tr>
+    <td>John Mulaney</td>
+    <td>spider-Ham</td>
+  </tr>
+  <tr>
+    <td>Kimiko Glenn</td>
+    <td>Peni Parker</td>
+  </tr>
+  <tr>
+    <td>Nicolas Cage</td>
+    <td>Spider-Noir</td>
+  </tr>
+  <tr>
+    <td>Kathryn Hahn</td>
+    <td>Doc ock</td>
+  </tr>
+  <tr>
+    <td>Liev Schreiber</td>
+    <td>Wilson Fisk</td>
+  </tr>
+  <tr>
+    <td>Chris Pine</td>
+    <td>Peter parker</td>
+  </tr>
+  <tr>
+    <td>Natalie Morales</td>
+    <td>Miss calleros</td>
+  </tr>
+</table>
 
 
 
